--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         Top Breeding Pair
                     </h2>
                     <div id="top-parents-container" class="space-y-4">
-                        <p class="card__placeholder-text">Add parents to your stable to see the top pair here.</p>
+                        <p class="card__placeholder-text">Add parents to your roster to see the top pair here.</p>
                     </div>
                 </section>
             </div>
@@ -78,15 +78,15 @@
                 <div class="card__header">
                     <h2 class="card__title">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2 text-teal-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7M4 7c0-2.21 3.582-4 8-4s8 1.79 8 4M4 7v10c0 2.21 3.582 4 8 4s8-1.79 8-4V7" /></svg>
-                        Breeding Stable
+                        Roster
                     </h2>
                     <button id="add-parent-btn" class="button button--secondary">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6" /></svg>
                         Add Parent
                     </button>
                 </div>
-                <div id="stable-container" class="stable space-y-4 max-h-[70vh] overflow-y-auto pr-2">
-                    <p class="card__placeholder-text text-center py-8">Your stable is empty. Add a parent to get started!</p>
+                <div id="roster-container" class="roster space-y-4 max-h-[70vh] overflow-y-auto pr-2">
+                    <p class="card__placeholder-text text-center py-8">Your roster is empty. Add a parent to get started!</p>
                 </div>
             </section>
         </main>
