--- a/index.html
+++ b/index.html
@@ -96,13 +96,18 @@
         <div class="modal__content">
             <div class="mt-3">
                 <div class="modal__header">
-                    <h3 class="modal__title">Add New Parent</h3>
+                    <h3 id="modal-title" class="modal__title">Add New Parent</h3>
                     <button id="close-modal-btn" class="modal__close-btn">
                         <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" /></svg>
                     </button>
                 </div>
 
                 <form id="add-parent-form" class="form space-y-4">
+                    <div id="gen-display" class="hidden">
+                        <label class="form__label">Generation</label>
+                        <p id="gen-display-text" class="form__static-text"></p>
+                    </div>
+
                     <div>
                         <label for="uma-name" class="form__label">Uma Name</label>
                         <input type="text" id="uma-name" class="form__input" required>
