--- a/index.html
+++ b/index.html
@@ -150,4 +150,53 @@
                        <div id="modal-white-sparks-container" class="form__obtained-sparks-container space-y-2 max-h-32 overflow-y-auto pr-2 mb-2"></div>
                        <div class="flex items-center space-x-2">
                            <select id="modal-wishlist-select" class="form__input flex-grow"></select>
-                           <button type="button" id="show-add-skill-modal-btn" class="button button--neutral flex-shrink-0">
+                           <button type="button" id="show-add-skill-modal-btn" class="button button--neutral flex-shrink-0">New...</button>
+                       </div>
+                       <div class="flex space-x-2 mt-2">
+                           <select id="modal-white-stars" class="form__input">
+                               <option>1</option><option>2</option><option>3</option>
+                           </select>
+                           <button type="button" id="add-modal-white-btn" class="button button--neutral">Add Spark</button>
+                       </div>
+                    </div>
+
+                    <div class="form__footer">
+                        <button id="save-parent-btn" type="submit" class="button button--primary w-full">
+                            Calculate Score & Save
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div id="add-skill-modal" class="skill-modal hidden opacity-0">
+        <div class="skill-modal__content">
+            <h3 class="skill-modal__title">Add Skill to Wishlist</h3>
+            <form id="add-skill-form">
+                <div class="space-y-4">
+                    <div>
+                        <label for="new-skill-name" class="form__label">Skill Name</label>
+                        <input type="text" id="new-skill-name" class="form__input" required>
+                    </div>
+                    <div>
+                        <label for="new-skill-tier" class="form__label">Rank</label>
+                        <select id="new-skill-tier" class="form__input">
+                            <option value="S">Rank S</option>
+                            <option value="A">Rank A</option>
+                            <option value="B">Rank B</option>
+                            <option value="C">Rank C</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="skill-modal__footer">
+                    <button type="button" id="cancel-add-skill-btn" class="button button--neutral">Cancel</button>
+                    <button type="submit" class="button button--primary">Add Skill</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <script src="js/app.js" defer></script>
+</body>
+</html>
