feat: implement multi-project profiles with tab navigation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
             </div>
         </header>
 
+        <nav class="tabs__container">
+            <ul id="tabs-list" class="tabs__list">
+                <!-- Tabs will be dynamically inserted here -->
+            </ul>
+            <button id="add-profile-btn" class="tabs__add-btn" title="Add New Project">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6" /></svg>
+            </button>
+        </nav>
+
         <main class="grid grid-cols-1 lg:grid-cols-3 gap-8">
             <div class="lg:col-span-1 space-y-8">
                 <section id="goal-definition" class="card">
