feat: replace native dialogs with custom modal service

--- a/index.html
+++ b/index.html
@@ -241,6 +241,19 @@
         </div>
     </div>
 
+    <div id="dialog-modal" class="dialog-modal hidden opacity-0">
+        <div class="dialog-modal__content">
+            <h3 id="dialog-title" class="dialog-modal__title">Dialog Title</h3>
+            <p id="dialog-message" class="dialog-modal__message">Dialog message goes here.</p>
+            <div id="dialog-input-container" class="hidden my-4">
+                <input type="text" id="dialog-input" class="form__input">
+            </div>
+            <div id="dialog-footer" class="dialog-modal__footer">
+                <!-- Buttons will be dynamically inserted here -->
+            </div>
+        </div>
+    </div>
+
     <script src="js/app.js" defer></script>
 </body>
 </html>
