--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <button id="manage-wishlist-btn" class="button button--neutral button--small">Manage</button>
                             </div>
                             <div id="wishlist-container" class="wishlist space-y-2 max-h-48 overflow-y-auto pr-2"></div>
-                            <div class="flex space-x-2 mt-2">
+                            <div class="flex items-center space-x-2 mt-2">
                                 <div id="wishlist-skill-select" class="searchable-select w-full"></div>
                                 <select id="wishlist-tier" class="form__input w-32">
                                     <option value="S">Rank S</option>
