feat: replace uma name input with searchable select container

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                     <div>
                         <label for="uma-name" class="form__label">Uma Name</label>
-                        <input type="text" id="uma-name" class="form__input" required>
+                        <div id="uma-name-select" class="searchable-select"></div>
                     </div>
                     
                     <div class="form__section">
