--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
                                 </div>
                             </div>
                         </div>
+                         <div>
+                            <label class="form__label mb-1">Unique Spark Wishlist</label>
+                            <div id="unique-wishlist-select" class="multi-select"></div>
+                        </div>
                         <div class="border-t pt-4">
                             <div class="form__section-header mb-2">
                                 <h3 class="form__section-title">White Spark Wishlist</h3>
@@ -168,6 +172,18 @@
                         </div>
                     </div>
                     
+                    <div class="form__section">
+                        <h4 class="form__section-title">Obtained Unique Sparks</h4>
+                        <div id="modal-unique-sparks-container" class="form__obtained-sparks-container"></div>
+                        <div class="form__input-group">
+                           <div id="modal-unique-skill-select" class="searchable-select w-full"></div>
+                           <select id="modal-unique-stars" class="form__input w-24" aria-label="Select Stars">
+                               <option>1</option><option>2</option><option>3</option>
+                           </select>
+                           <button type="button" id="add-modal-unique-btn" class="button button--secondary flex-shrink-0">Add</button>
+                       </div>
+                    </div>
+
                     <div class="form__section">
                         <div class="form__section-header">
                             <h4 class="form__section-title">Obtained White Sparks</h4>
