feat: replace unique spark multi-select with full wishlist ui

--- a/index.html
+++ b/index.html
@@ -60,9 +60,19 @@
                                 </div>
                             </div>
                         </div>
-                         <div>
-                            <label class="form__label mb-1">Unique Spark Wishlist</label>
-                            <div id="unique-wishlist-select" class="multi-select"></div>
+                         <div class="border-t pt-4">
+                            <h3 class="form__section-title mb-2">Unique Spark Wishlist</h3>
+                            <div id="unique-wishlist-container" class="wishlist space-y-2 max-h-48 overflow-y-auto pr-2"></div>
+                            <div class="flex items-center space-x-2 mt-2">
+                                <div id="unique-wishlist-skill-select" class="searchable-select w-full"></div>
+                                <select id="unique-wishlist-tier" class="form__input w-32">
+                                    <option value="S">Rank S</option>
+                                    <option value="A">Rank A</option>
+                                    <option value="B">Rank B</option>
+                                    <option value="C">Rank C</option>
+                                </select>
+                                <button id="add-unique-wishlist-btn" class="button button--primary">Add</button>
+                            </div>
                         </div>
                         <div class="border-t pt-4">
                             <div class="form__section-header mb-2">
