style: align wishlist rank select to the left

--- a/index.html
+++ b/index.html
@@ -50,15 +50,17 @@
                          <div class="border-t pt-4">
                             <h3 class="form__section-title mb-2">Unique Spark Wishlist</h3>
                             <div id="unique-wishlist-container" class="wishlist space-y-2 max-h-48 overflow-y-auto pr-2"></div>
-                            <div class="flex items-center space-x-2 mt-2">
-                                <div id="unique-wishlist-skill-select" class="searchable-select flex-1 min-w-0"></div>
-                                <select id="unique-wishlist-tier" class="form__input w-32 flex-shrink-0">
-                                    <option value="S">Rank S</option>
-                                    <option value="A">Rank A</option>
-                                    <option value="B">Rank B</option>
-                                    <option value="C">Rank C</option>
-                                </select>
-                                <button id="add-unique-wishlist-btn" class="button button--primary flex-shrink-0">Add</button>
+                            <div class="mt-2 space-y-2">
+                                <div id="unique-wishlist-skill-select" class="searchable-select"></div>
+                                <div class="flex justify-between items-center">
+                                    <select id="unique-wishlist-tier" class="form__input w-32">
+                                        <option value="S">Rank S</option>
+                                        <option value="A">Rank A</option>
+                                        <option value="B">Rank B</option>
+                                        <option value="C">Rank C</option>
+                                    </select>
+                                    <button id="add-unique-wishlist-btn" class="button button--primary">Add</button>
+                                </div>
                             </div>
                         </div>
                         <div class="border-t pt-4">
@@ -67,15 +69,17 @@
                                 <button id="manage-wishlist-btn" class="button button--neutral button--small">Manage</button>
                             </div>
                             <div id="wishlist-container" class="wishlist space-y-2 max-h-48 overflow-y-auto pr-2"></div>
-                            <div class="flex items-center space-x-2 mt-2">
-                                <div id="wishlist-skill-select" class="searchable-select flex-1 min-w-0"></div>
-                                <select id="wishlist-tier" class="form__input w-32 flex-shrink-0">
-                                    <option value="S">Rank S</option>
-                                    <option value="A">Rank A</option>
-                                    <option value="B">Rank B</option>
-                                    <option value="C">Rank C</option>
-                                </select>
-                                <button id="add-wishlist-btn" class="button button--primary flex-shrink-0">Add</button>
+                             <div class="mt-2 space-y-2">
+                                <div id="wishlist-skill-select" class="searchable-select"></div>
+                                <div class="flex justify-between items-center">
+                                    <select id="wishlist-tier" class="form__input w-32">
+                                        <option value="S">Rank S</option>
+                                        <option value="A">Rank A</option>
+                                        <option value="B">Rank B</option>
+                                        <option value="C">Rank C</option>
+                                    </select>
+                                    <button id="add-wishlist-btn" class="button button--primary">Add</button>
+                                </div>
                             </div>
                         </div>
                     </div>
