--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 <body class="page">
     <div class="container mx-auto p-4 md:p-8 max-w-7xl">
         <header class="header mb-8 text-center">
-            <h1 class="header__title text-4xl font-bold text-gray-800">Umamusume Parent Tracker</h1>
+            <h1 class="header__title text-4xl font-bold">Umamusume Parent Tracker</h1>
             <p class="header__subtitle text-gray-600 mt-2">A point-based system for progressive parent farming.</p>
             <div class="header__actions">
                 <label for="import-file" class="button button--secondary">Import Data</label>
                 <input type="file" id="import-file" class="visually-hidden" accept="application/json">
                 <button id="export-btn" class="button button--neutral">Export Data</button>
+                <button id="theme-toggle-btn" class="theme-toggle" title="Toggle theme">
+                    <svg class="icon sun-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 2a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0v-1.5A.75.75 0 0110 2zM10 15a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0v-1.5A.75.75 0 0110 15zM10 7a3 3 0 100 6 3 3 0 000-6zM15.657 4.343a.75.75 0 10-1.06-1.06l-1.061 1.06a.75.75 0 001.06 1.06l1.06-1.06zM5.404 14.596a.75.75 0 10-1.06-1.06l-1.06 1.06a.75.75 0 001.06 1.06l1.06-1.06zM17.25 10a.75.75 0 01-.75.75h-1.5a.75.75 0 010-1.5h1.5a.75.75 0 01.75.75zM4.25 10a.75.75 0 01-.75.75h-1.5a.75.75 0 010-1.5h1.5a.75.75 0 01.75.75zM14.596 5.404a.75.75 0 001.06-1.06l-1.06-1.061a.75.75 0 10-1.06 1.06l1.06 1.06zM6.464 13.536a.75.75 0 001.06-1.06l-1.06-1.06a.75.75 0 10-1.06 1.06l1.06 1.06z" clip-rule="evenodd" /></svg>
+                    <svg class="icon moon-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M7.455 2.104a.75.75 0 00-.965.572A9.003 9.003 0 002.5 12.162a9.003 9.003 0 008.59 8.592.75.75 0 00.572-.965A5.25 5.25 0 017.455 2.104z" /></svg>
+                </button>
             </div>
         </header>
 
@@ -32,7 +36,7 @@
         </nav>
 
         <main class="grid grid-cols-1 lg:grid-cols-3 gap-8">
-            <div class="lg:col-span-1 space-y-8">
+            <div class="lg-col-span-1 space-y-8">
                 <section id="goal-definition" class="card">
                     <h2 class="card__title">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2 text-indigo-500" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6H8.5l-1-1H5a2 2 0 00-2 2zm9-13.5V9" /></svg>
